[package]
name = "pure3d-gltf"
edition = "2018"
version = "0.0.1"
authors = ["David Komer<david.komer@gmail.com.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/pure3d/0.0.1/pure3d/"
repository = "https://github.com/dakom/pure3d"
homepage = "https://github.com/dakom/pure3d"
description = "GLTF capabilities for the Pure3D WebGL rendering suite"
categories = ["rendering", "rendering::engine", "wasm"]
keywords = ["pure3d", "gltf", "webgl", "renderer", "3d", "graphics"]

[lib]
crate-type = ["cdylib"]
