[package]
name = "pure3d_webgl"
edition = "2018"
version = "0.0.1"
authors = ["David Komer<david.komer@gmail.com.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/pure3d/0.0.1/pure3d/"
repository = "https://github.com/dakom/pure3d"
homepage = "https://github.com/dakom/pure3d"
description = "Core WebGL capabilities for the Pure3D WebGL rendering suite"
categories = ["rendering", "rendering::engine", "wasm"]
keywords = ["pure3d", "webgl", "renderer", "3d", "graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.29"
js-sys = "0.3.6"

[dependencies.web-sys]
version = "0.3.6"
features = [
  'CanvasRenderingContext2d',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'HtmlCanvasElement',
  'WebGlProgram',
  'WebGlShader',

]
