[package]
name = "integration_tests"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.31"
js-sys = "0.3.8"
futures = "0.1.25"
wasm-bindgen-futures = "0.3.8"
pure3d_webgl = { path = "../../crates/webgl" }
web_sys_loaders = { path = "../../crates/web_sys_loaders" }


[dependencies.web-sys]
version = "0.3.8"
features = [
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlBuffer',
    'WebGlTexture',
    'WebGlUniformLocation',
    'HtmlCanvasElement',
    'console',
    ]
