[package]
name = "webgl-demo"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.29"
js-sys = "0.3.6"
pure3d_webgl = { path = "../../crates/webgl" }

[dependencies.web-sys]
version = "0.3.6"
features = [
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlBuffer',
    'WebGlShader',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'DomRect',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'console',
    ]
